<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/content">

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".EnrollCandidate">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
        />

        <RelativeLayout
                android:id="@+id/inner_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
              android:id="@+id/nameField"
              android:hint="@string/nameField"
              android:layout_centerHorizontal="true"
              android:inputType="textCapWords"
    />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/emailField"
                      android:layout_below="@id/nameField"
                      android:hint="@string/emailField"
                      android:layout_centerHorizontal="true"
                      android:inputType="textEmailAddress"
    />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/phoneField"
                      android:layout_below="@id/emailField"
                      android:hint="@string/phoneField"
                      android:layout_centerHorizontal="true"
                      android:inputType="phone"
    />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/dobButton"
                      android:layout_below="@id/phoneField"
                      android:layout_centerInParent="true"
                      android:hint="@string/selectDob"
                      android:onClick="getDob"
                      android:clickable="true"
                      android:focusable="false"
                      android:inputType="date"

    />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/openCameraButton"
                    android:layout_below="@id/dobButton"
                    android:layout_centerInParent="true"
                    android:text="@string/openCamera"
    />

            <ImageView android:layout_width="fill_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/result"
                       android:layout_below="@id/openCameraButton"
                       android:contentDescription="@string/enroll"
                       android:scaleType="center"
                       android:visibility="gone"
    />

</RelativeLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/navigation_bar"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/nav_menu"
            app:headerLayout="@layout/nav_header"
    />

</android.support.v4.widget.DrawerLayout>