<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity"
        android:id="@+id/content">

    <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
    >

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
        />

        <RelativeLayout
                android:id="@+id/inner_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/enrollButton"
                    android:text="@string/enroll"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:onClick="enrollCandidate"
            />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/verifyButton"
                    android:text="@string/verify"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/enrollButton"
                    android:onClick="verifyCandidate"
            />

            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:layout_centerInParent="true"
                    android:layout_below="@id/verifyButton"
                    android:onClick="shareApp"
            />

        </RelativeLayout>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
            android:id="@+id/navigation_bar"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/nav_menu"
            app:headerLayout="@layout/nav_header"
    />

</android.support.v4.widget.DrawerLayout>